tests/paczka1/small_fuzzy/26007189.err
Error in line 6: gGtpNec A453 12,3
Error in line 14: A453 A589 312,1
